fix chat msg alignment & make app bar sticky

--- a/frontend/src/pages/chat/chat.css
+++ b/frontend/src/pages/chat/chat.css
@@ -7,6 +7,7 @@
     overflow-x: hidden;
     position: absolute;
     bottom: 50px;
+    right: 0px;
     width: 98vw;
     max-height: 100%;
 }
